data/derived/comb/progs/unify/prog5998.ml.out
Characters 364-394:
  |6 -> buildSquare (build(rand,d), build(rand,d))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
